@@ -5,6 +5,9 @@ glibc (2.3.6-7) UNRELEASED; urgency=low
     CPU that will be used.
   * Allow the glibc to be cross-compiled for Linux and kFreeBSD.  (Closes:
     #358771)
+  * Bumped the minimum kernel to 2.4.1 instead of 2.4.0 as there are some
+    important new features in this version. Thanks to Petr Salinger for
+    noticing me.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 11 Apr 2006 00:54:26 +0200
 
